# config-injector

./: .gitignore  LICENSE  README.md  pyproject.toml  tox.ini
config_injector/: __init__.py  config.py  exc.py  injector.py  utils.py
config_injector/config/: __init__.py  config.py  exc.py  utils.py
examples/basic_example/: __main__.py  config.yaml  module.py
tests/: test_config.py  test_injector.py  test_utils.py
tests/config/: test_config.py
