[tool.poetry]
name = "config-injector"
version = "0.1.0"
description = "Simple dependency injection framework for python for easy and logical app configuration."
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
readme = "README.md"
url = "https://github.com/DustinMoriarty/config-injector"
homepage = "https://github.com/DustinMoriarty/config-injector"
repository = "https://github.com/DustinMoriarty/config-injector"
documentation = "https://github.com/DustinMoriarty/config-injector"
liscense = "MIT"


[tool.poetry.dependencies]
python = "^3.7.3"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
