[tool.poetry]
name = "config-injector"
version = "0.2.0"
description = "Simple dependency injection framework for python for easy and logical app configuration."
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/DustinMoriarty/config-injector"
repository = "https://github.com/DustinMoriarty/config-injector"
documentation = "https://github.com/DustinMoriarty/config-injector"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
pyaml = "^20.4.0"
PyYAML = "^5.3.1"
importlib-metadata = {version = "^3.1.0", python = "<3.8"}

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["poetry", "tests"]
skip_glob = ["*/setup.py"]
filter_files = true
known_first_party = "poetry"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
