[tool.poetry]
name = "config-injector"
version = "0.2.2"
description = "Simple dependency injection framework for python for easy and logical app configuration."
authors = ["DustinMoriarty <dustin.moriarty@protonmail.com>"]
readme = "README.md"
homepage = "https://github.com/DustinMoriarty/config-injector"
repository = "https://github.com/DustinMoriarty/config-injector"
documentation = "https://github.com/DustinMoriarty/config-injector"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
toml = "^0.10.2"
pyaml = "^20.4.0"
PyYAML = "^5.3.1"
importlib-metadata = {version = ">=0.12,<=4", python = "<3.8"}

[tool.poetry.dev-dependencies]
isort = "^5.6.4"
flake8 = "^3.8.4"
pytest = "^6.1.2"
black = "^20.8b1"
tox = "^3.20.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
force_single_line = true
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
src_paths = ["config_injector", "tests"]
filter_files = true

[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
